# crl-tool

./: .gitignore  Makefile  README.md  flake.nix  notes.txt  package.yaml  prototype.py  query-impl-1.kore  query-impl-2.kore  query.kore  query1.kore  query2.kore  query3.kore  query4.kore  shell.nix  stack.yaml
crltool/: pyproject.toml
crltool/crltool/: ReachabilitySystem.py  __main__.py  crl.py  frontend.py  kcommands.py  kore_utils.py  verify.py
nix/: default.nix  sources.json  stack-integration.nix
prototype/: prototype.py
src/: Main.hs
test/: Makefile  definition.kore  one_plus_two.kore  while.kore
test/lang/imp/: count.imp  count_monotonic-spec.k  count_monotonic.json  empty_program_with_constraints.json  empty_program_without_constraints.json  imp.k  incr_monotonic-spec.k  need_contradiction-spec.k  sum_to_n.imp  sum_to_n_monotonic.json
test/lang/imp++fn/: imp.k  test.imp
